@@ -1,3 +1,6 @@
+h3. Unreleased
+* 2015-10-03: Provide CanCan abilities for :discover permissions. [Randy Coulman]
+
 h3. 9.2.2 (2015-08-03)
 * 2015-07-30: Moved condition logic to its own method to give app developer a chance to configure it to not perform future date validation [val99erie]
 
